--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0;url=https://ok.me/UQXL1">
+    <meta http-equiv="refresh" content="0;url=https://vk.cc/cL1LoK">
 </head>
 <body>
-    <p>Если вы не были перенаправлены автоматически, <a href="https://ok.me/UQXL1">нажмите здесь</a>.</p>
+    <p>Если вы не были перенаправлены автоматически, <a href="https://vk.cc/cL1LoK">нажмите здесь</a>.</p>
 </body>
 </html>
